unpackaged/main/default/objects/Seller_Communication__c/Seller_Communication__c.object-meta.xml
<CustomObject>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Seller Communication</label>
    <nameField>
        <label>Seller Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seller Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>