unpackaged/main/default/objects/Seller_Communication__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011484 - Creation of seller communication records for SP Welcome Email (SSO users only)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Seller Communications</relationshipLabel>
    <relationshipName>Seller_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>