unpackaged/main/default/objects/Seller_Communication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seller Communications</relationshipLabel>
    <relationshipName>Seller_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>