unpackaged/main/default/objects/Seller_Communication__c/fields/Contract_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date__c</fullName>
    <description>US-0012109 - Lightning Email Logic for DE Coupon Sellers - Contract Signature Invitation</description>
    <formula>Coupon_Seller__r.Contract_Due_Date__c</formula>
    <label>Contract Due Date</label>
    <type>Date</type>
</CustomField>