unpackaged/main/default/objects/Seller_Communication__c/fields/Coupon_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Accept_Date__c</fullName>
    <description>US-0012112 - Lightning Email Logic for DE Coupon Sellers - Contract Signature Confirmation</description>
    <formula>Coupon_Seller__r.Contract_Accept_Date_Z__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Accept Date</label>
    <type>Date</type>
</CustomField>