unpackaged/main/default/objects/Seller_Communication__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>US-0012112 - Lightning Email Logic for DE Coupon Sellers - Contract Signature Confirmation</description>
    <formula>Coupon_Seller__r.Coupon_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Code</label>
    <type>Text</type>
</CustomField>