unpackaged/main/default/objects/Seller_Communication__c/fields/Coupon_Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Marketing_Name__c</fullName>
    <description>US-0012100</description>
    <formula>Coupon_Seller__r.Marketing_Coupon_Name__c</formula>
    <label>Coupon Marketing Name</label>
    <type>Text</type>
</CustomField>