unpackaged/main/default/objects/Seller_Communication__c/fields/Coupon_Seller__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Coupon Seller</label>
    <referenceTo>Coupon_Seller__c</referenceTo>
    <relationshipLabel>Seller Communications</relationshipLabel>
    <relationshipName>Seller_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>