unpackaged/main/default/objects/Seller_Communication__c/fields/Coupon_URL_Portal__c.field-meta.xml
<CustomField>
    <fullName>Coupon_URL_Portal__c</fullName>
    <description>US-0012100 - Lightning Email Logic for DE Coupon Sellers - Coupon Item Upload Invitation</description>
    <formula>HYPERLINK( CouponURLPortalText__c , Coupon_Seller__r.Name ,&#39;_blank&#39;)</formula>
    <label>Coupon URL Portal</label>
    <type>Text</type>
</CustomField>