unpackaged/main/default/objects/Seller_Communication__c/fields/CouponEndDate__c.field-meta.xml
<CustomField>
    <fullName>CouponEndDate__c</fullName>
    <description>US-0012100 - Lightning Email Logic for DE Coupon Sellers - Coupon Item Upload Invitation</description>
    <formula>Coupon_Seller__r.Coupon_End_Date__c</formula>
    <label>Coupon End Date</label>
    <type>Date</type>
</CustomField>