unpackaged/main/default/objects/Seller_Communication__c/fields/CouponSellerOwner__c.field-meta.xml
<CustomField>
    <fullName>CouponSellerOwner__c</fullName>
    <description>US-0012100 - Lightning Email Logic for DE Coupon Sellers - Coupon Item Upload Invitation</description>
    <formula>Coupon_Seller__r.EBH_CouponSellerOwner__r.FirstName +&#39; &#39;+Coupon_Seller__r.EBH_CouponSellerOwner__r.LastName</formula>
    <label>Coupon Seller Owner</label>
    <type>Text</type>
</CustomField>