unpackaged/main/default/objects/Seller_Communication__c/fields/CouponStartDate__c.field-meta.xml
<CustomField>
    <fullName>CouponStartDate__c</fullName>
    <description>US-0012100 - Lightning Email Logic for DE Coupon Sellers - Coupon Item Upload Invitation</description>
    <formula>Coupon_Seller__r.Coupon_Start_Date__c</formula>
    <label>Coupon Start Date</label>
    <type>Date</type>
</CustomField>