unpackaged/main/default/objects/Seller_Communication__c/fields/CouponURLPortalText__c.field-meta.xml
<CustomField>
    <fullName>CouponURLPortalText__c</fullName>
    <description>US-0012100 - Lightning Email Logic for DE Coupon Sellers - Coupon Item Upload Invitation
Merging Field in flow only</description>
    <label>Coupon URL Portal (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>