unpackaged/main/default/objects/Seller_Communication__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Deal</label>
    <referenceTo>EBH_Deal__c</referenceTo>
    <relationshipLabel>Seller Communications</relationshipLabel>
    <relationshipName>Seller_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>