unpackaged/main/default/objects/Seller_Communication__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <description>US-0012008 - Add Email field to Seller Communication record</description>
    <label>Email address</label>
    <type>Email</type>
</CustomField>