unpackaged/main/default/objects/Seller_Communication__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload Items Invitation</fullName>
            </value>
            <value>
                <fullName>Upload Items Reminder</fullName>
            </value>
            <value>
                <fullName>Sign Agreement Invitation</fullName>
            </value>
            <value>
                <fullName>Sign Agreement Reminder</fullName>
            </value>
            <value>
                <fullName>Signed Agreement Confirmation</fullName>
            </value>
            <value>
                <fullName>Account Manager Subscription Request (PH)</fullName>
            </value>
            <value>
                <fullName>Sign Agreement Invitation (PH)</fullName>
            </value>
            <value>
                <fullName>Welcome Email</fullName>
            </value>
            <value>
                <fullName>Welcome Email Deals</fullName>
            </value>
            <value>
                <fullName>Welcome Email Coupons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>