unpackaged/main/default/objects/Seller_Communication__c/fields/Subscription_Request__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011434 - Creation of new Seller Communication object</description>
    <label>Subscription Request</label>
    <referenceTo>Subscription_Request__c</referenceTo>
    <relationshipLabel>Seller Communications</relationshipLabel>
    <relationshipName>Seller_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>