unpackaged/main/default/objects/Seller_Communication__c/recordTypes/Coupons.recordType-meta.xml
<RecordType>
    <fullName>Coupons</fullName>
    <active>true</active>
    <label>Coupons</label>
</RecordType>