unpackaged/main/default/objects/Seller_Communication__c/recordTypes/Deals.recordType-meta.xml
<RecordType>
    <fullName>Deals</fullName>
    <active>true</active>
    <label>Deals</label>
</RecordType>