unpackaged/main/default/objects/Seller_Communication__c/recordTypes/Subscription_Requests.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Requests</fullName>
    <active>true</active>
    <label>Subscription Requests</label>
</RecordType>