unpackaged/main/default/objects/Seller_Communication__c/recordTypes/Welcome_Email.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Email</fullName>
    <active>true</active>
    <label>Welcome Email</label>
</RecordType>