unpackaged/main/default/objects/Seller_Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Platform__c</columns>
    <columns>Region__c</columns>
    <columns>Coupon_Seller__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coupon_Seller__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>